feat: add thrift setup

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist && yarn build:thrift",
     "build": "nest build",
+    "build:thrift": "thrift-typescript --target thrift-server --rootDir . --sourceDir src/thrift --outDir src/math/gen math.thrift",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -20,14 +21,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@creditkarma/thrift-server-core": "^0.15.3",
+    "@creditkarma/thrift-server-express": "^0.15.3",
+    "@creditkarma/thrift-typescript": "^3.7.6",
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/microservices": "^6.10.1",
     "@nestjs/platform-express": "^6.7.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
   },
   "devDependencies": {
+    "@creditkarma/thrift-client": "^0.15.3",
     "@nestjs/cli": "^6.9.0",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
